@startuml complete_eer_diagram

skinparam class {
    BackgroundColor LightYellow
    ArrowColor DarkBlue
    BorderColor Black
}

package "Users Schema" {
    entity User {
        * user_id : UUID
        --
        email : VARCHAR(255)
        password_hash : VARCHAR(255)
        first_name : VARCHAR(100)
        last_name : VARCHAR(100)
        phone : VARCHAR(20)
        is_active : BOOLEAN
        last_login : TIMESTAMP
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity ContactInfo {
        * contact_id : UUID
        --
        user_id : UUID
        contact_type : VARCHAR(50)
        contact_value : VARCHAR(255)
        is_primary : BOOLEAN
        created_at : TIMESTAMP
    }

    entity SavedCarts {
        * cart_id : UUID
        --
        user_id : UUID
        cart_items : JSONB
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity UserRoles {
        * role_id : UUID
        --
        user_id : UUID
        role_name : VARCHAR(50)
        created_at : TIMESTAMP
    }

    entity Addresses {
        * address_id : UUID
        --
        user_id : UUID
        address_type : VARCHAR(20)
        address_line1 : VARCHAR(255)
        address_line2 : VARCHAR(255)
        city : VARCHAR(100)
        state : VARCHAR(100)
        postal_code : VARCHAR(20)
        country_code : VARCHAR(2)
        is_default : BOOLEAN
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity Preferences {
        * preference_id : UUID
        --
        user_id : UUID
        default_language : VARCHAR(5)
        default_currency : VARCHAR(3)
        notification_settings : JSONB
        privacy_settings : JSONB
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity UserSecurity {
        * security_id : UUID
        --
        user_id : UUID
        two_factor_enabled : BOOLEAN
        security_questions : JSONB
        created_at : TIMESTAMP
    }

    entity SavedPayments {
        * saved_payment_id : UUID
        --
        user_id : UUID
        payment_method_id : UUID
        nickname : VARCHAR(100)
        is_active : BOOLEAN
        created_at : TIMESTAMP
    }
}

package "Orders Schema" {
    entity Orders {
        * order_id : UUID
        --
        user_id : UUID
        order_number : VARCHAR(50)
        order_date : TIMESTAMP
        status : VARCHAR(20)
        currency_code : VARCHAR(3)
        subtotal : DECIMAL(10,2)
        shipping_cost : DECIMAL(10,2)
        tax_amount : DECIMAL(10,2)
        total_amount : DECIMAL(10,2)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity OrderItems <<weak>> {
        * order_item_id : UUID
        --
        order_id : UUID
        product_id : UUID
        quantity : INTEGER
        unit_price : DECIMAL(10,2)
        total_price : DECIMAL(10,2)
    }

    entity OrderHistory {
        * history_id : UUID
        --
        order_id : UUID
        status : VARCHAR(20)
        comment : TEXT
        created_by : UUID
        created_at : TIMESTAMP
    }
}

package "Products Schema" {
    entity Products {
        * product_id : UUID
        --
        name : VARCHAR(255)
        description : TEXT
        price : DECIMAL(10,2)
        category_id : UUID
        brand_id : UUID
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity ProductSpecifications {
        * spec_id : UUID
        --
        product_id : UUID
        key : VARCHAR(100)
        value : VARCHAR(255)
    }

    entity ProductImages {
        * image_id : UUID
        --
        product_id : UUID
        url : VARCHAR(255)
        is_primary : BOOLEAN
    }

    entity ProductVariants {
        * variant_id : UUID
        --
        product_id : UUID
        name : VARCHAR(255)
        additional_price : DECIMAL(10,2)
    }

    entity Reviews {
        * review_id : UUID
        --
        product_id : UUID
        user_id : UUID
        rating : INTEGER
        comment : TEXT
        created_at : TIMESTAMP
    }

    entity Inventory {
        * inventory_id : UUID
        --
        product_id : UUID
        warehouse_id : UUID
        quantity : INTEGER
        updated_at : TIMESTAMP
    }

    entity InventoryAlerts {
        * alert_id : UUID
        --
        product_id : UUID
        variant_id : UUID
        threshold : INTEGER
        created_at : TIMESTAMP
    }
}

package "Promotions Schema" {
    entity PromotionProducts {
        * promotion_product_id : UUID
        --
        promotion_id : UUID
        product_id : UUID
    }

    entity PromotionUsage {
        * usage_id : UUID
        --
        promotion_id : UUID
        user_id : UUID
        used_at : TIMESTAMP
    }
}

package "Sellers Schema" {
    entity Sellers {
        * seller_id : UUID
        --
        name : VARCHAR(255)
        rating : DECIMAL(3,2)
        created_at : TIMESTAMP
    }

    entity SellerRatings {
        * rating_id : UUID
        --
        seller_id : UUID
        user_id : UUID
        rating : INTEGER
        comment : TEXT
        created_at : TIMESTAMP
    }
}

package "Shipping Schema" {
    entity Carriers {
        * carrier_id : UUID
        --
        name : VARCHAR(255)
        contact_number : VARCHAR(20)
    }

    entity ShippingMethods {
        * method_id : UUID
        --
        carrier_id : UUID
        name : VARCHAR(255)
        cost : DECIMAL(10,2)
    }

    entity Shipments {
        * shipment_id : UUID
        --
        order_id : UUID
        method_id : UUID
        tracking_number : VARCHAR(50)
        shipped_date : TIMESTAMP
        delivery_date : TIMESTAMP
    }
}

package "Prime Schema" {
    entity PrimeMemberships {
        * membership_id : UUID
        --
        user_id : UUID
        plan_type : VARCHAR(50)
        status : VARCHAR(20)
        start_date : TIMESTAMP
        end_date : TIMESTAMP
        auto_renewal : BOOLEAN
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity PrimeBenefits {
        * benefit_id : UUID
        --
        name : VARCHAR(255)
        description : TEXT
        is_active : BOOLEAN
    }

    entity PrimeUsage {
        * usage_id : UUID
        --
        membership_id : UUID
        benefit_id : UUID
        used_at : TIMESTAMP
    }

    package "Prime Video" {
        entity VideoContent {
            * content_id : UUID
            --
            title : VARCHAR(255)
            description : TEXT
            type : VARCHAR(50) <<enum>> // 'movie', 'series'
            release_year : INTEGER
            rating : VARCHAR(10)
            duration_minutes : INTEGER
            is_prime_exclusive : BOOLEAN
            created_at : TIMESTAMP
        }

        entity Episodes {
            * episode_id : UUID
            --
            content_id : UUID
            season_number : INTEGER
            episode_number : INTEGER
            title : VARCHAR(255)
            description : TEXT
            duration_minutes : INTEGER
            created_at : TIMESTAMP
        }

        entity WatchHistory {
            * history_id : UUID
            --
            user_id : UUID
            content_id : UUID
            episode_id : UUID
            watched_duration : INTEGER
            watched_at : TIMESTAMP
        }
    }
}

package "Trendyol Food Delivery" {
    entity Restaurants {
        * restaurant_id : UUID
        --
        name : VARCHAR(255)
        address : TEXT
        phone : VARCHAR(20)
        is_active : BOOLEAN
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity Menus {
        * menu_id : UUID
        --
        restaurant_id : UUID
        name : VARCHAR(255)
        description : TEXT
        price : DECIMAL(10,2)
        is_active : BOOLEAN
    }

    entity FoodOrders {
        * order_id : UUID
        --
        user_id : UUID
        restaurant_id : UUID
        order_date : TIMESTAMP
        status : VARCHAR(20)
        total_amount : DECIMAL(10,2)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }
}

package "Hepsiburada Premium" {
    entity PremiumMemberships {
        * membership_id : UUID
        --
        user_id : UUID
        start_date : TIMESTAMP
        end_date : TIMESTAMP
        status : VARCHAR(20)
        benefits : JSONB
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    entity PremiumBenefits {
        * benefit_id : UUID
        --
        name : VARCHAR(255)
        description : TEXT
        is_active : BOOLEAN
    }

    entity PremiumUsage {
        * usage_id : UUID
        --
        membership_id : UUID
        benefit_id : UUID
        used_at : TIMESTAMP
    }
}

User ||--o{ ContactInfo : "has"
User ||--o{ SavedCarts : "has"
User ||--o{ UserRoles : "has"
User ||--o{ Addresses : "has"
User ||--o{ Preferences : "has"
User ||--o{ UserSecurity : "has"
User ||--o{ SavedPayments : "has"
User ||--o{ Orders : "places"
User ||--o{ Reviews : "writes"
User ||--o{ PrimeMemberships : "subscribes to"
User ||--o{ PremiumMemberships : "subscribes to"
User ||--o{ FoodOrders : "orders"
User ||--o{ WatchHistory : "watches"

Orders ||--o{ OrderItems : "contains"
Orders ||--o{ OrderHistory : "has"
Orders ||--o{ Shipments : "shipped by"
Orders ||--o{ Transactions : "paid by"

Products ||--o{ ProductSpecifications : "has"
Products ||--o{ ProductImages : "has"
Products ||--o{ ProductVariants : "has"
Products ||--o{ Reviews : "reviewed by"
Products ||--o{ Inventory : "stored in"
Products ||--o{ InventoryAlerts : "alerts"
Products ||--o{ PromotionProducts : "promoted in"

Promotions ||--o{ PromotionProducts : "includes"
Promotions ||--o{ PromotionUsage : "used in"

Sellers ||--o{ SellerRatings : "rated by"
Sellers ||--o{ Products : "sells"

Carriers ||--o{ ShippingMethods : "offers"
ShippingMethods ||--o{ Shipments : "used in"

Restaurants ||--o{ Menus : "offers"
Restaurants ||--o{ FoodOrders : "fulfills"

PremiumMemberships ||--o{ PremiumBenefits : "includes"
PremiumMemberships ||--o{ PremiumUsage : "used in"

PrimeMemberships ||--o{ PrimeBenefits : "includes"
PrimeMemberships ||--o{ PrimeUsage : "used in"

VideoContent ||--o{ Episodes : "contains"
VideoContent ||--o{ WatchHistory : "viewed in"
Episodes ||--o{ WatchHistory : "viewed in"

@enduml